[package]
name = "wasmtime-bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "2.0"
wat = "1.0"

[lib]
name = "wblibsql"
crate-type = ["cdylib", "staticlib"]
doc = false
test = false
doctest = false

[profile.release]
opt-level = "s"
